fix images gap for slide

--- a/css/style.css
+++ b/css/style.css
@@ -147,10 +147,17 @@ body {
     max-width: 1200px;
     margin: auto; }
     .gallery .splide__slide img {
-      width: 100%;
+      max-width: 100%;
       height: auto;
       object-fit: contain;
       max-height: 80vh; }
+      @media only screen and (max-width: 700px) {
+        .gallery .splide__slide img {
+          max-width: 80vw;
+          height: 100%;
+          object-fit: cover; } }
+    .gallery .splide__slide__container {
+      height: 100%; }
 
 .timeline {
   max-width: 120rem;
